submitting css with changes

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,8 @@
 <head>
     <!-- Adding a favicon -->
     <link rel="icon" href="/media/mihead.png">
+    <!-- CSS -->
+    <link rel = "stylesheet" href="/css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +12,21 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <nav>
-                <h1>Michael's Headspace</h1>
+        <div class="container-navbar">
+            <h1>Michael's Headspace</h1>
+            <nav class = "navbar">
                 <ul>
-                    <li>Home</li>
-                    <li>Notes</li>
-                    <li>Blog</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Notes</a></li>
+                    <li><a href="">Blog</a></li>
                 </ul>
             </nav>
+        </div>
+        <!-- Hamburger -->
+        <div class="menu-toggle">
+            <div class="hamburger">
+                
+            </div>
         </div>
     </header>
 </body>
