--- a/html/index.html
+++ b/html/index.html
@@ -5,18 +5,19 @@
     <link rel="icon" href="/media/mihead.png">
     <!-- CSS -->
     <link rel = "stylesheet" href="/css/style.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael's Headspace</title>
+    <title>Student's Stockpile</title>
 </head>
 <body>
     <header>
         <div class="container-navbar">
-            <h1>Michael's Headspace</h1>
+            <h1>Student's Stockpile</h1>
             <nav class = "navbar">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Notes</a></li>
                     <li><a href="">Blog</a></li>
                 </ul>
